# big-brain-pointers

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ExampleGTest  ExampleGTest[1]_include.cmake  ExampleGTest[1]_tests.cmake  Makefile  README.md  cmake_install.cmake  example.cpp
.github/workflows/: README.md  build-and-release.yml  pr-check-build.yml
include/: UniquePointer.h  bbp.h  dummy.hpp  foo.hpp  foo_if.hpp  memory.h  unique_ptr.h
src/: UniquePointer.cpp  dummy.cpp  foo.cpp
test/: mock_foo.hpp  testDummy.cpp
tests/: main.cpp
